2002-03-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (TCLSH_PROG): moved and updated env var definitions
	to have tclsh work from build dir.  Removed TCL_EXTRA_CFLAGS,
	TCL_LD_FLAGS, TCL_SHLIB_LD_LIBS, TCL_DBGX, TCL_STUB_LIB_FILE,
	TCL_STUB_LIB_SPEC as they aren't needed (configure acquires all
	that info for us).  TCL_LIBS is also not needed, but left in as a
	reference to the libs Tcl used.

	* configure: regen based on updated tclconfig/tcl.m4
	* configure.in: moved the SHLIB_LD_LIBS magic into
	tclconfig/tcl.m4 and noted where users can modify (SHLIB_LD_)LIBS.

2002-03-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (install-binaries): corrected if shell error
	[Bug #532557] (virden)

2002-03-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:
	* mkIndex.tcl.in (removed): removed the need for this script by
	simplifying the default install structure to use pkglibdir for the
	main dynamic library file generated.

	* configure:
	* configure.in: use double eval on the ${PACKAGE}_LIB_FILE to
	substitute the ${DBGX} variable.
	Remove output of the mkIndex.tcl script.

	* Makefile.in: added pkgIndex.tcl to binaries dependencies.
	Removed use of mkIndex.tcl script.  Simple pkgIndex.tcl target
	added and install-lib-binaries modified to use pkglibdir instead
	of bindir and libdir directories.

2002-03-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regenerated
	* configure.in: removed pulling (UN)SHARED_LIB_SUFFIX from
	tclConfig.sh as these are defined by SC_CONFIG_CFLAGS.

	* Makefile.in (TCLSH_PROG): added a viable TCL_LIBRARY for when
	the TCLSH_PROG is a built, but not installed, executable.
	(install-binaries, test, LIB_FILE): use	$($(PACKAGE)_LIB_FILE)
	instead of directly referencing package name to reduce number of
	lines that need changing.
	(dist): removed install of no longer existent tclconfig/config.*

2002-03-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in:
	* doc/sha1.n: moved from sha1.n